--- a/pom.xml
+++ b/pom.xml
@@ -91,9 +91,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.auth0</groupId>
-			<artifactId>java-jwt</artifactId>
-			<version>3.11.0</version>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
 		</dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
