--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,6 +39,7 @@ spring.security.user.password=jwtspringapp
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
+jwt.secret=jwtspringapp
 
 
 
